<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bottom_stack"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/stackLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bottom_stack_number"
            android:id="@+id/stack"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/stackLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bottom_correct"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/correct"
            android:id="@+id/correctLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bottom_correct_number"
            android:id="@+id/correct"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

</RelativeLayout>